--- a/marketplace/package.json
+++ b/marketplace/package.json
@@ -1,35 +1,39 @@
 {
-  "name": "next-typescript-starter",
+  "name": "app-1",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "export": "next export",
-    "deploy": "next build && next export && npx thirdweb@latest upload out"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.10.4",
+    "@chakra-ui/react": "^2.10.7",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@thirdweb-dev/react": "^4",
-    "@thirdweb-dev/sdk": "^4",
-    "ethers": "^5",
-    "framer-motion": "^11.15.0",
-    "next": "^13",
-    "next-themes": "^0.4.4",
-    "react": "^18.2",
-    "react-dom": "^18.2",
-    "react-hook-form": "^7.54.2",
-    "react-icons": "^5.4.0"
+    "@tanstack/react-query": "^4.36.1",
+    "@thirdweb-dev/react": "^4.9.4",
+    "framer-motion": "^12.10.5",
+    "next": "14.1.0",
+    "react": "^18.3",
+    "react-burger-menu": "^3.1.0",
+    "react-dom": "^18.3",
+    "react-hook-form": "^7.56.3",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.5.1"
   },
   "devDependencies": {
-    "@types/node": "^18.11.11",
+    "@types/node": "^20",
     "@types/react": "^18",
-    "eslint": "^8.29.0",
-    "eslint-config-next": "^13",
-    "typescript": "^5.7.2"
+    "@types/react-burger-menu": "^2.8.7",
+    "@types/react-dom": "^18",
+    "@types/react-router-dom": "^5.3.3",
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
